create pizza and order objects

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <body>
   <div class="container">
     <h1>Order Your Pizza</h1>
+    <form>
+      <p>Pick a size:</p>
+        <label for="sizeL"><input id="sizeL" type="radio" value="large">Large</label>
+        <label for="sizeM"><input id="sizeM" type="radio" value="medium">Medium</label>
+        <label for="sizeS"><input id="sizeS" type="radio" value="small">Small</label>
+    </form>
   </div>
 </body>
 </html>
