--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
   <div class="container">
     <h1>Order Your Pizza</h1>
     <form>
+      <div class="form-group">
       <p>Pick a size:</p>
-        <label for="sizeL"><input id="sizeL" type="radio" value="large">Large</label>
-        <label for="sizeM"><input id="sizeM" type="radio" value="medium">Medium</label>
-        <label for="sizeS"><input id="sizeS" type="radio" value="small">Small</label>
+        <label for="sizeL" name="selectSize"><input id="sizeL" type="radio" name="selectSize" value="large">Large</label>
+        <label for="sizeM name="selectSize""><input id="sizeM" type="radio" name="selectSize" value="medium">Medium</label>
+        <label for="sizeS" name="selectSize"><input id="sizeS" type="radio" name="selectSize" value="small">Small</label>
+      </div>
+      <div class="form-group">
+        <p>Choose your toppings:</p>
+          <input type="checkbox" name="veggies" value="peppers"> Green Bell Peppers<br>
+          <input type="checkbox" name="veggies" value="onions"> Onions<br>
+          <input type="checkbox" name="veggies" value="olives" > Olives<br>
+          <input type="checkbox" name="meats" value="pepperoni"> Pepperoni<br>
+          <input type="checkbox" name="meats" value="sausage"> Sausage<br>
+          <input type="checkbox" name="meats" value="chicken" > Chicken<br>
+      </div>
+      <button type="submit">Create My Pizza</button>
+      <p id="viewPrice"></p>
     </form>
   </div>
 </body>
