add call to getPrice function and display output in a text span

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <input type="checkbox" name="meats" value="chicken" > Chicken<br>
       </div>
       <button type="submit">Create My Pizza</button>
-      <p id="viewPrice"></p>
+      <p id="viewOrder">Total Price: <strong>$<span id="viewPrice"></span></strong></p>
     </form>
   </div>
 </body>
