add method to calculate order total with multiple pizzas

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
               <input type="checkbox" name="meats" value="sausage"> Sausage<br>
               <input type="checkbox" name="meats" value="chicken" > Chicken<br>
           </div>
-          <div id="button">
-            <button type="submit">Create My Pizza</button>
+          <div class="button">
+            <button type="submit">Add Pizza</button>
         </div>
-          <p id="viewOrder">Total Price: <strong>$<span id="viewPrice"></span></strong></p>
+          <p class="viewOrder">Pizza Price: <strong>$<span id="viewPrice"></span></strong></p>
+          <p class="viewOrder">Order Total: <strong>$<span id="viewOrderTotal"></span></strong></p>
         </form>
       </div>
     </div>
