--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
             <p>Choose your toppings:</p>
               <input type="checkbox" name="veggies" value="peppers"> Green Bell Peppers<br>
               <input type="checkbox" name="veggies" value="onions"> Onions<br>
-              <input type="checkbox" name="veggies" value="olives" > Olives<br>
+              <input type="checkbox" name="veggies" value="mushrooms" > Mushrooms<br>
+              <input type="checkbox" name="veggies" value="roasted garlic" > Roasted Garlic<br>
+              <input type="checkbox" name="veggies" value="pineapple" > Pineapple<br>
               <input type="checkbox" name="meats" value="pepperoni"> Pepperoni<br>
               <input type="checkbox" name="meats" value="sausage"> Sausage<br>
+              <input type="checkbox" name="meats" value="Canadian Bacon"> Canadian Bacon<br>
               <input type="checkbox" name="meats" value="chicken" > Chicken<br>
           </div>
           <div class="button">
